conflict side branch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Hey git</title>
 </head>
 <body>
-    <h1>New page</h1>
+    <h1>New page </h1>
+    <p>next text</p>
     
 </body>
 </html>
